Selection Tookit package v1/retrieveOutput/objects/Candidate__c.object
<CustomObject>
    <fields>
        <fullName>Bands__c</fullName>
        <label>Bands</label>
        <picklist>
            <picklistValues>
                <fullName>EBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I-A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I-B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II-A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II-B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III-A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III-B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV-A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV-B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V-A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V-B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VI-A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VI-B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VII-A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VII-B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Candidate_Name__c</fullName>
        <description>Enter the name of the candidate</description>
        <label>Candidate Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cultural_Bar_Raiser_score__c</fullName>
        <label>Cultural Bar Raiser</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EBM_score__c</fullName>
        <label>EBM</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Head_Of_Function_score__c</fullName>
        <label>Head Of Function</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager_Score__c</fullName>
        <label>Hiring Manager</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Key_Challenger_score__c</fullName>
        <label>Key Challenger</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <description>Enter Office</description>
        <label>Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Score__c</fullName>
        <formula>(IF(ISNULL(People_Manager_Score__c),0,People_Manager_Score__c) + IF(ISNULL(Hiring_Manager_Score__c),0,Hiring_Manager_Score__c) + if(ISNULL(Key_Challenger_score__c),0,Key_Challenger_score__c)+ IF(ISNULL(Cultural_Bar_Raiser_score__c),0,Cultural_Bar_Raiser_score__c)+ IF(ISNULL(Head_Of_Function_score__c),0,Head_Of_Function_score__c )+ IF(ISNULL(EBM_score__c),0,EBM_score__c))
/
(If(People_Manager_Score__c =0 ,0,1) + IF(Hiring_Manager_Score__c =0,0,1)+if(Key_Challenger_score__c =0,0,1)+if(Cultural_Bar_Raiser_score__c=0,0,1)+if(Head_Of_Function_score__c=0,0,1)+if(EBM_score__c=0,0,1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>People_Manager_Score__c</fullName>
        <label>People Manager</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Enter phonenumber</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <description>Enter position</description>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Application Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People Manager Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hiring Manager Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Challenger Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultural Bar Raiser Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head of Function Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EBM Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate Hired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate Did Not Pass</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Candidate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Candidate_Name__c</columns>
        <columns>Position__c</columns>
        <columns>Bands__c</columns>
        <columns>Office__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CAN-{000000}</displayFormat>
        <label>Candidate Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>